@@ -92,7 +92,7 @@ Referring to :func:`nothing <>`.
    :type isdst: * some complex
                 * expression
    :returns: a new :class:`Time` instance
-   :rtype: :class:`Time`
+   :rtype: Time
    :raises ValueError: if the values are out of range
    :ivar int hour: like *hour*
    :ivar minute: like *minute*
